2007-01-21  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c: supported cairo 1.3.12.

2007-01-08  Kouhei Sutou  <kou@cozmixng.org>

	* samples/text2.rb (render_layout): used
	Pango::LayoutIter#line_extents and Pango::LayoutIter#line_yrange.

2007-01-02  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c: cached Ruby object for
	source.

2007-01-01  Kouhei Sutou  <kou@cozmixng.org>

	* samples/text2.rb: used Pango::LayoutIter.

2006-12-30  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_pattern.c: Cairo::GradientPattern#[]
	-> Cairo::GradientPattern#get_color_stop.

2006-12-29  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c: keep reference of Ruby
	object for the surface in the context.

	* packages/cairo/ext/rb_cairo_surface.c:
	- use file output functions provided by cairo.
	- hold output target reference in surface.

2006-12-28  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo.c (Cairo::BINDINGS_VERSION):
	1.2.0 -> 1.4.0.

2006-12-22  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c,
	  packages/cairo/ext/rb_cairo_surface.c,
	  packages/cairo/ext/rb_cairo_pattern.c,
	  packages/cairo/ext/rb_cairo_exception.c,
	  packages/cairo/ext/rb_cairo_constants.c,
	  packages/cairo/ext/rb_cairo_pattern.c,
	  packages/cairo/ext/rb_cairo_private.h: supported cairo 1.3.8.

2006-12-19  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_pattern.c:
	- moved Cairo::SurfacePattern#{extend,filter}{,=} to
	Cairo::Pattern. I can't remember why I defined them in
	Cairo::SurfacePattern...
	- defined Cairo::Pattern#__extend__ as alias of Object#extend to
	avoid discarding.

2006-12-15  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/lib/cairo/context/path.rb: ported Pango's
	cairotwisted example as library.
	* samples/text-on-path.rb: ported Pango's cairotwisted example by
	using the library.
