@@ -1,3 +1,9 @@
+2007-02-04  Kouhei Sutou  <kou@cozmixng.org>
+
+	* packages/cairo/ext/rb_cairo_surface.c: the first argument of
+	Cairo::ImageSurface#initialize, cairo_format_t, is optional.
+	* samples/*.rb: followed the change.
+
 2007-01-21  Kouhei Sutou  <kou@cozmixng.org>
 
 	* packages/cairo/ext/rb_cairo_context.c: supported cairo 1.3.12.
